# violence-detection-in-turkish-series

./: .env.example  .gitignore  LICENSE  README.md  README.tr.md  main.py  pyproject.toml  requirements.txt
accuracy_testing/: data_preparation_and_llm_analysis.py  evaluate_accuracy.py  manual_labelling_interface.py
scripts/: pre-processing.py
src/database/: violence_detection_database.py
src/detection/: detect_violence.py
src/download_and_transcription/: add_clips_to_database.py  transcribe.py
src/utils/: functions.py
